[VD-87] fix docs and responses
