# docs/swagger.json
@@ -67,7 +67,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Subscription"
+                                "$ref": "#/definitions/models.AuthorSubscriptionMpfd"
                             }
                         }
                     },
@@ -116,6 +116,13 @@
                 "summary": "Create Author subscription",
                 "operationId": "create_author_subscription",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "example": "path/to/image",
+                        "name": "img",
+                        "in": "formData",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "example": 2999,
@@ -220,7 +227,7 @@
                     "200": {
                         "description": "Successfully received subscription",
                         "schema": {
-                            "$ref": "#/definitions/models.Subscription"
+                            "$ref": "#/definitions/models.AuthorSubscriptionMpfd"
                         }
                     },
                     "400": {
@@ -279,6 +286,13 @@
                         "description": "Subscription ID",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "path/to/image",
+                        "name": "img",
+                        "in": "formData",
                         "required": true
                     },
                     {
@@ -1027,7 +1041,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Subscription"
+                                "$ref": "#/definitions/models.AuthorSubscriptionMpfd"
                             }
                         }
                     },
@@ -1327,6 +1341,38 @@
                 "username": {
                     "type": "string",
                     "example": "admin"
+                }
+            }
+        },
+        "models.AuthorSubscriptionMpfd": {
+            "type": "object",
+            "required": [
+                "img",
+                "price",
+                "text",
+                "tier",
+                "title"
+            ],
+            "properties": {
+                "img": {
+                    "type": "string",
+                    "example": "path/to/image"
+                },
+                "price": {
+                    "type": "integer",
+                    "example": 2999
+                },
+                "text": {
+                    "type": "string",
+                    "example": "some text"
+                },
+                "tier": {
+                    "type": "integer",
+                    "example": 15
+                },
+                "title": {
+                    "type": "string",
+                    "example": "some title"
                 }
             }
         },
